# muggle_blogs

./: .gitignore  index.md  readme.md  update_index.py
blogs/crypt/: crypt_index.md
blogs/crypt/basic_concept/: basic_concept.md
blogs/crypt/des/: des.md
blogs/crypt/enigma/: enigma.md
blogs/crypt/enigma/src/c/: CMakeLists.txt  enigma.c  enigma.h  main.c
